--- a/LearnedGeek/Views/_ViewImports.cshtml
+++ b/LearnedGeek/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using workspace
-@using workspace.Models
+﻿@using LearnedGeek
+@using LearnedGeek.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
